--- a/APIGatewayService/package.json
+++ b/APIGatewayService/package.json
@@ -7,14 +7,23 @@
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
         "test": "jest",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "generate:openapi": "node generate_openapi.js"
     },
     "dependencies": {
         "cors": "2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "helmet": "^7.1.0",
+        "morgan": "^1.10.0",
+        "express-rate-limit": "^7.4.0",
+        "express-validator": "^7.2.1",
+        "http-proxy-middleware": "^3.0.3",
+        "jsonwebtoken": "^9.0.2",
+        "axios": "^1.7.9",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "eslint": "^9.24.0",
